@@ -575,6 +575,7 @@ Jack Jansen
 Bill Janssen
 Thomas Jarosch
 Juhana Jauhiainen
+Rajagopalasarma Jayakrishnan
 Zbigniew Jędrzejewski-Szmek
 Julien Jehannet
 Drew Jenkins
